# algo-course

course1/: mincut.py  (+6 more)
course4/: .gitignore  Cargo.toml  course4.code-workspace
course4/benches/: week1.rs
course4/resources/week3/: tsp.txt
course4/resources/week3/test_cases/: input_simple_10_8.txt  input_simple_11_8.txt  input_simple_12_8.txt  input_simple_13_10.txt  input_simple_14_10.txt  input_simple_15_10.txt  input_simple_16_10.txt  input_simple_17_20.txt  input_simple_18_20.txt  input_simple_19_20.txt  input_simple_1_2.txt  input_simple_20_20.txt  input_simple_21_40.txt  input_simple_22_40.txt  input_simple_23_40.txt  input_simple_24_40.txt  input_simple_25_80.txt  input_simple_26_80.txt  input_simple_27_80.txt  input_simple_28_80.txt  input_simple_29_100.txt  input_simple_2_2.txt  input_simple_30_100.txt  input_simple_31_100.txt  input_simple_32_100.txt  input_simple_33_200.txt  input_simple_34_200.txt  input_simple_35_200.txt  input_simple_36_200.txt  input_simple_37_400.txt  input_simple_38_400.txt  input_simple_39_400.txt  input_simple_3_2.txt  input_simple_40_400.txt  input_simple_41_800.txt  input_simple_42_800.txt  input_simple_43_800.txt  input_simple_44_800.txt  input_simple_45_1000.txt  (+33 more)
course4/src/: lib.rs  main.rs
course4/src/common/: types.rs  utils.rs
course4/src/week1/: bellman_ford.rs  floyd_warshall.rs  mod.rs  solution.rs  types.rs
course4/src/week2/: solution.rs  types.rs
course4/src/week3/: solution.rs
course4/src/week4/: mod.rs  solution.rs  types.rs
course4/tests/: week1_test.rs  week2_test.rs  week3_test.rs  week4_test.rs
(+26 files in other folders)
