[package]
name = "course4"
version = "0.1.0"
authors = ["jverce <juanjov@gmail.com>"]
edition = "2018"

[dependencies]
criterion = "0.3.1"
generic-array = "0.13.2"
itertools = "0.8.1"
lazy_static = "1.4.0"
num = "0.2.1"
rayon = "1.1"
regex = "1"
spade = { git = "https://github.com/jverce/spade.git" }
typenum = "1.11.2"

[[bench]]
name = "week1"
harness = false
